# airflow-demo

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  sftp.sh
AWS-infra/: main.tf
dags/example/: airflow_s3.py  config.py  delete_object.py  example_dag.py  get_object.py  list_objects.py  put_object.py  put_s3_object.py  s3_example_dag.py  spin_s3.py  utils.py
infra/: build.sh  destroy.sh  install-spinkube.sh  spin-operator.runtime-class.yaml
infra/aks-cluster/: install-airflow.sh  install-spinkube.sh
infra/aks-cluster/helm/: values.yaml
infra/aks-cluster/helm/airflow/: values.yaml
infra/aks-cluster/helm/ftp-server/: Chart.yaml  values.yaml
infra/aks-cluster/helm/ftp-server/templates/: ftp-server.yaml
infra/aks-cluster/helm/spin/: Chart.yaml
infra/aks-cluster/helm/spin/templates/: spin.yaml
infra/aks-cluster/terraform/: terraform.tfvars.tmpl  variables.tf
infra/s3-bucket/: terraform.tfstate
infra/s3-bucket/terraform/: main.tf  terraform.tfvars
s3-client/: .env  Dockerfile  main.py  script.sh  spin.toml
sftp/sample_files/: sample_data.xlsx
sftp/sftp-config/: sample.sftp.json
spin-app/: build.sh
