[tool.poetry]
name = "airflow-test-wasm"
version = "0.1.0"
description = ""
authors = ["Luca Soato <luca.soato@cardoai.com>"]
readme = "README.md"
packages = [{include = "airflow_test_wasm"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
